Add PUT /note
